feat: dynamic import with ng-packagr project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,11 @@
   <button (click)="loadLib()">dynamic load lib</button>
   {{libMsg}}
 </p>
+<hr>
+<p>
+  ng-packagr dynamic import
+</p>
+<p>
+  <lib-lib></lib-lib>
+  <button (click)="loadProjectLib()">dynamic project load lib</button>
+</p>
